# albert

./: .travis.yml  CMakeLists.txt  resources.qrc
.travis/: Dockerfile.ubuntu1604
include/albert/: action.h  config.h  config.h.in  export.h  extensionmanager.h  fallbackprovider.h  frontend.h  indexitem.h  item.h  native.h  plugininstance.h  pluginprovider.h  pluginspec.h  query.h  queryhandler.h
include/albert/util/: history.h  itemroles.h  offlineindex.h  standardactions.h  standardindexitem.h  standarditem.h
lib/globalshortcut/include/globalshortcut/: globalshortcut_globals.h  hotkeymanager.h
lib/globalshortcut/src/: hotkeymanager.cpp  hotkeymanager_x11.cpp  hotkeymanager_x11.h
lib/xdg/include/xdg/: iconlookup.h  xdg_globals.h
lib/xdg/src/: iconlookup.cpp  themefileparser.cpp  themefileparser.h
src/app/: logging.h  main.cpp  nativepluginprovider.cpp  nativepluginprovider.h  query.cpp  queryexecution.cpp  queryexecution.h  querymanager.cpp  querymanager.h  trayicon.cpp  trayicon.h
src/app/settingswidget/: grabkeybutton.cpp  grabkeybutton.h  pluginlistmodel.cpp  pluginlistmodel.h  pluginwidget.cpp  pluginwidget.h  pluginwidget.ui  settingswidget.cpp  settingswidget.h  settingswidget.ui  statswidget.cpp  statswidget.h
src/lib/: extensionmanager.cpp  fuzzysearch.cpp  fuzzysearch.h  history.cpp  native.cpp  offlineindex.cpp  plugininstance.cpp  pluginprovider.cpp  prefixsearch.cpp  prefixsearch.h  searchbase.cpp  searchbase.h  standardactions.cpp  standardindexitem.cpp  standarditem.cpp
src/services/fileindex/: fileindex.cpp  fileindex.h
